src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .title {
    @apply leading-9 font-bold uppercase font-cormorant_sc text-button_black;
  }

  .basic-text {
    @apply text-sm font-normal leading-6 break-words font-open text-gray_strong;
  }

  .bold-text {
    @apply text-sm font-bold leading-7 break-words font-open text-gray_strong;
  }

  .circle {
    @apply font-open font-light uppercase break-words tracking-[2px] text-button_black;
  }

  .teaser-img {
    @apply rounded-full right-16 max-h-64 max-w-64 w-[50vw] h-[50vw] sm:mb-20 xl:mt-20;
  }

  .button {
    @apply px-5 py-2.75 bg-button_black rounded-[20px] text-white uppercase text-xs tracking-[2px] font-semibold font-open hover:bg-blue transition-all duration-150 hover:shadow-sm;
  }

  .button--secondary {
    @apply text-button_black bg-white border-2 border-button_black;
  }
}

input:focus-visible,
textarea:focus-visible {
  border: solid 1px #1D1D1B;
  box-shadow: 0 0 5px 1px #F49716;
  outline: none;
}

.brand {
  @apply p-1 mr-4 rounded text-white uppercase font-sans font-light bg-orange;
}

.black_button {
  @apply text-white uppercase gap-3 px-5 py-3 rounded-2xl bg-button_black cursor-pointer;
}

.blog_post_card {
  @apply flex lg:flex-row flex-1 items-center lg:container lg:mx-auto overflow-x-hidden mb-16;
}

article.blog-first>div.blog-article-child {
  @apply lg:-ml-[200px] lg:pl-[200px] bg-gray_light;
}

article.blog-second>div.blog-article-child {
  @apply lg:-mr-[200px] lg:pl-[200px] bg-gray_light;
}

